--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nav--menu {
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
