--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,31 +1,39 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 .nav--menu {
   background-color: #e6e6e6;
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%232d6aa8' fill-opacity='0.25'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-.box--shadow {
+.box--shadow{
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
-.app--header-circles div {
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+.app--header-circles {
+  div {
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  }
+
+  div:nth-child(1) {
+    width: 70px;
+    height: 70px;
+    
+  }
+  
+  div:nth-child(2) {
+    margin-left: -4rem;
+    padding: 10px;
+    width: 70px;
+    height: 70px;
+  }
+  
+  div:nth-child(3) {
+    margin-left: 3rem;
+    width: 100px;
+    padding: 10px;
+    height: 100px;
+  }
 }
-.app--header-circles div:nth-child(1) {
-  width: 70px;
-  height: 70px;
-}
-.app--header-circles div:nth-child(2) {
-  margin-left: -4rem;
-  padding: 10px;
-  width: 70px;
-  height: 70px;
-}
-.app--header-circles div:nth-child(3) {
-  margin-left: 3rem;
-  width: 100px;
-  padding: 10px;
-  height: 100px;
-}/*# sourceMappingURL=globals.css.map */
+
