--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  color-scheme: only light;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -35,4 +40,4 @@
   width: 100px;
   padding: 10px;
   height: 100px;
-}/*# sourceMappingURL=globals.css.map */
+} /*# sourceMappingURL=globals.css.map */
