--- a/app/globals.css
+++ b/app/globals.css
@@ -100,7 +100,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  background: rgba(0, 0, 0, 0.834);
+  background: #edf2f8;
   z-index: 1;
 }
 
@@ -108,7 +108,7 @@
   width: 64px;
   height: 64px;
   border: 8px solid;
-  border-color: #3d5af1 transparent #3d5af1 transparent;
+  border-color: #32a2a8 transparent #32a2a8 transparent;
   border-radius: 50%;
   animation: spin-anim 1.2s linear infinite;
 }
